crates/ladder_types/tests/ui/generated/should_fail/test__unary_wrapper_ladder__R2_plus_R1.stderr
error[E0308]: mismatched types
 --> tests/ui/generated/should_fail/test__unary_wrapper_ladder__R2_plus_R1.rs:5:24
  |
5 |    let _ = R2::new() + R1::new();
  |                        ^^^^^^^^^ expected `RelativeTo<RelativeTo<...>>`, found `RelativeTo<RelativeTo<()>>`
  |
  = note: expected struct `RelativeTo<RelativeTo<RelativeTo<RelativeTo<()>>>>`
             found struct `RelativeTo<RelativeTo<()>>`
